# f360-mcp

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  F360MCP.code-workspace  LICENSE  README.md  pyproject.toml
addon/: F360MCP.manifest  F360MCP.py
addon/server/: __init__.py  command_handler.py  event_bridge.py  socket_server.py
addon/server/handlers/: __init__.py  _helpers.py  analysis.py  export.py  import_design.py  parameters.py  scene.py  utility.py
scripts/: install_addon.py  uninstall_addon.py
src/berrevoets_f360_mcp/: __init__.py  __main__.py  connection.py  mock.py  server.py
src/berrevoets_f360_mcp/tools/: __init__.py  analysis.py  export.py  import_design.py  parameters.py  scene.py  utility.py
tests/: test_tools.py
