[project]
name = "berrevoets-f360-mcp"
version = "0.1.0"
description = "MCP server for Autodesk Fusion 360 — file management, export, import, and design queries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bert Berrevoets", email = "bert@berrevoets.net" },
]
keywords = ["mcp", "fusion360", "cad", "3d-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "fastmcp>=2.0",
    "anyio>=4.0",
    "click>=8.0",
]

[project.scripts]
berrevoets-f360-mcp = "berrevoets_f360_mcp:main"

[project.urls]
Homepage = "https://github.com/bberrevoets/f360-mcp"
Repository = "https://github.com/bberrevoets/f360-mcp"
Issues = "https://github.com/bberrevoets/f360-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/berrevoets_f360_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
